// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`selectExports renders appropriately when the user has no products 1`] = `
<Fragment>
  <BaseLayout
    description="Export selected products into NeTEx."
    title="Select Exports"
  >
    <BackButton
      href="/products/exports"
    />
    <CsrfForm
      action="/api/selectExports"
      csrfToken=""
      method="post"
    >
      <div
        className="govuk-grid-row"
      >
        <div
          className="govuk-grid-column-full"
        >
          <div
            className="dft-flex dft-flex-justify-space-between"
          >
            <h1
              className="govuk-heading-xl"
            >
              Export your selected products
            </h1>
             
            <div
              className="align-middle"
            >
              <button
                className="govuk-button govuk-visually-hidden"
                disabled={false}
                onClick={[Function]}
                type="submit"
              >
                Export selected products
              </button>
            </div>
          </div>
          <div
            className="govuk-grid-row"
          >
            <div
              className="dft-flex dft-flex-justify-space-between"
            >
              <div
                className="govuk-grid-column-two-thirds"
              >
                <p
                  className="govuk-body-m govuk-!-margin-bottom-5"
                >
                  This page will export all of the products you select. Expired products, or products for expired services, will not be included in the list below.
                </p>
              </div>
              <button
                className="govuk-button govuk-button--secondary govuk-visually-hidden"
                data-module="govuk-button"
                id="select-all"
                onClick={[Function]}
              >
                Unselect all
              </button>
            </div>
          </div>
          <p
            className="govuk-body-m govuk-!-margin-top-5"
          >
            <em>
              You currently have no products that can be exported.
            </em>
          </p>
        </div>
      </div>
    </CsrfForm>
  </BaseLayout>
</Fragment>
`;

exports[`selectExports renders fully when the user has products they can export and both types of products (point to point and non point to point) 1`] = `
<Fragment>
  <BaseLayout
    description="Export selected products into NeTEx."
    title="Select Exports"
  >
    <BackButton
      href="/products/exports"
    />
    <CsrfForm
      action="/api/selectExports"
      csrfToken=""
      method="post"
    >
      <div
        className="govuk-grid-row"
      >
        <div
          className="govuk-grid-column-full"
        >
          <div
            className="dft-flex dft-flex-justify-space-between"
          >
            <h1
              className="govuk-heading-xl"
            >
              Export your selected products
            </h1>
             
            <div
              className="align-middle"
            >
              <button
                className="govuk-button"
                disabled={false}
                onClick={[Function]}
                type="submit"
              >
                Export selected products
              </button>
            </div>
          </div>
          <div
            className="govuk-grid-row"
          >
            <div
              className="dft-flex dft-flex-justify-space-between"
            >
              <div
                className="govuk-grid-column-two-thirds"
              >
                <p
                  className="govuk-body-m govuk-!-margin-bottom-5"
                >
                  This page will export all of the products you select. Expired products, or products for expired services, will not be included in the list below.
                </p>
              </div>
              <button
                className="govuk-button govuk-button--secondary"
                data-module="govuk-button"
                id="select-all"
                onClick={[Function]}
              >
                Select all
              </button>
            </div>
          </div>
          <div>
            <strong
              className="govuk-tag govuk-tag--blue govuk-!-margin-bottom-4"
              id="products-selected"
            >
              0
               / 
              6
               selected
            </strong>
            <div
              className="govuk-tabs"
              data-module="govuk-tabs"
            >
              <h2
                className="govuk-tabs__title"
              >
                Products
              </h2>
              <ul
                className="govuk-tabs__list"
              >
                <li
                  className="govuk-tabs__list-item govuk-tabs__list-item--selected"
                >
                  <a
                    className="govuk-tabs__tab"
                    href="#services"
                  >
                    Services
                  </a>
                </li>
                <li
                  className="govuk-tabs__list-item"
                >
                  <a
                    className="govuk-tabs__tab"
                    href="#period-products"
                  >
                    Period products
                  </a>
                </li>
                <li
                  className="govuk-tabs__list-item"
                >
                  <a
                    className="govuk-tabs__tab"
                    href="#flat-fare-products"
                  >
                    Flat fare products
                  </a>
                </li>
                <li
                  className="govuk-tabs__list-item"
                >
                  <a
                    className="govuk-tabs__tab"
                    href="#multi-operator-products"
                  >
                    Multi operator products
                  </a>
                </li>
                <li
                  className="govuk-tabs__list-item"
                >
                  <a
                    className="govuk-tabs__tab"
                    href="#school-service-products"
                  >
                    Academic products
                  </a>
                </li>
              </ul>
              <div
                className="govuk-tabs__panel"
                id="services"
              >
                <h2
                  className="govuk-heading-m govuk-!-margin-bottom-6"
                >
                  Services
                </h2>
                <button
                  className="govuk-button govuk-button--secondary"
                  data-module="govuk-button"
                  id="open-all-services"
                  onClick={[Function]}
                >
                  Open all
                </button>
                <details
                  className="govuk-details margin-bottom-export"
                  data-module="govuk-details"
                  key="e2f23fq"
                  open={false}
                >
                  <summary
                    className="govuk-details__summary"
                  >
                    <span
                      className="govuk-details__summary-text"
                    >
                      2a
                       - 
                      Town
                       to
                       
                      Football Stadium
                    </span>
                  </summary>
                  <div
                    className="govuk-checkboxes__item govuk-checkboxes--small govuk-!-margin-top-2 govuk-!-margin-left-4"
                    key="checkbox-product-1"
                  >
                    <input
                      checked={false}
                      className="govuk-checkboxes__input"
                      id="checkbox-1"
                      name="productsToExport"
                      onChange={[Function]}
                      onClick={[Function]}
                      type="checkbox"
                      value="4"
                    />
                    <label
                      className="govuk-label govuk-checkboxes__label"
                      htmlFor="checkbox-1"
                      id="product-1"
                      role="input"
                    >
                      Adult single | Outbound | 01/02/2022
                    </label>
                  </div>
                </details>
                <details
                  className="govuk-details margin-bottom-export"
                  data-module="govuk-details"
                  key="32rf2cvwe"
                  open={false}
                >
                  <summary
                    className="govuk-details__summary"
                  >
                    <span
                      className="govuk-details__summary-text"
                    >
                      44
                       - 
                      College
                       to
                       
                      Shops
                    </span>
                  </summary>
                  <div
                    className="govuk-checkboxes__item govuk-checkboxes--small govuk-!-margin-top-2 govuk-!-margin-left-4"
                    key="checkbox-product-2"
                  >
                    <input
                      checked={false}
                      className="govuk-checkboxes__input"
                      id="checkbox-2"
                      name="productsToExport"
                      onChange={[Function]}
                      onClick={[Function]}
                      type="checkbox"
                      value="5"
                    />
                    <label
                      className="govuk-label govuk-checkboxes__label"
                      htmlFor="checkbox-2"
                      id="product-2"
                      role="input"
                    >
                      Student return | Inbound | 02/02/2022
                    </label>
                  </div>
                </details>
                <details
                  className="govuk-details margin-bottom-export"
                  data-module="govuk-details"
                  key="aweff3r323"
                  open={false}
                >
                  <summary
                    className="govuk-details__summary"
                  >
                    <span
                      className="govuk-details__summary-text"
                    >
                      11b
                       - 
                      Leeds
                       to
                       
                      Bradford
                    </span>
                  </summary>
                  <div
                    className="govuk-checkboxes__item govuk-checkboxes--small govuk-!-margin-top-2 govuk-!-margin-left-4"
                    key="checkbox-product-3"
                  >
                    <input
                      checked={false}
                      className="govuk-checkboxes__input"
                      id="checkbox-3"
                      name="productsToExport"
                      onChange={[Function]}
                      onClick={[Function]}
                      type="checkbox"
                      value="6"
                    />
                    <label
                      className="govuk-label govuk-checkboxes__label"
                      htmlFor="checkbox-3"
                      id="product-3"
                      role="input"
                    >
                      Saver ticket | Inbound | 02/02/2022
                    </label>
                  </div>
                </details>
              </div>
              <div
                className="govuk-tabs__panel govuk-tabs__panel--hidden"
                id="period-products"
              >
                <div>
                  <h2
                    className="govuk-heading-m govuk-!-margin-bottom-6"
                  >
                    Period products
                  </h2>
                  <div
                    className="govuk-checkboxes__item govuk-checkboxes--small govuk-!-margin-top-2 govuk-!-margin-left-4"
                    key="checkbox-product-4"
                  >
                    <input
                      checked={false}
                      className="govuk-checkboxes__input"
                      id="checkbox-4"
                      name="productsToExport"
                      onChange={[Function]}
                      onClick={[Function]}
                      type="checkbox"
                      value="1"
                    />
                    <label
                      className="govuk-label govuk-checkboxes__label"
                      htmlFor="checkbox-4"
                      id="product-4"
                      role="input"
                    >
                      Best product | 01/02/2022
                    </label>
                  </div>
                </div>
              </div>
              <div
                className="govuk-tabs__panel govuk-tabs__panel--hidden"
                id="flat-fare-products"
              >
                <div>
                  <h2
                    className="govuk-heading-m govuk-!-margin-bottom-6"
                  >
                    Flat fare products
                  </h2>
                  <div
                    className="govuk-checkboxes__item govuk-checkboxes--small govuk-!-margin-top-2 govuk-!-margin-left-4"
                    key="checkbox-product-5"
                  >
                    <input
                      checked={false}
                      className="govuk-checkboxes__input"
                      id="checkbox-5"
                      name="productsToExport"
                      onChange={[Function]}
                      onClick={[Function]}
                      type="checkbox"
                      value="2"
                    />
                    <label
                      className="govuk-label govuk-checkboxes__label"
                      htmlFor="checkbox-5"
                      id="product-5"
                      role="input"
                    >
                      Super product | 02/02/2022
                    </label>
                  </div>
                </div>
              </div>
              <div
                className="govuk-tabs__panel govuk-tabs__panel--hidden"
                id="multi-operator-products"
              >
                <div>
                  <h2
                    className="govuk-heading-m govuk-!-margin-bottom-6"
                  >
                    Multioperator products
                  </h2>
                  <div
                    className="govuk-checkboxes__item govuk-checkboxes--small govuk-!-margin-top-2 govuk-!-margin-left-4"
                    key="checkbox-product-6"
                  >
                    <input
                      checked={false}
                      className="govuk-checkboxes__input"
                      id="checkbox-6"
                      name="productsToExport"
                      onChange={[Function]}
                      onClick={[Function]}
                      type="checkbox"
                      value="3"
                    />
                    <label
                      className="govuk-label govuk-checkboxes__label"
                      htmlFor="checkbox-6"
                      id="product-6"
                      role="input"
                    >
                      Super product | 02/02/2022
                    </label>
                  </div>
                </div>
              </div>
              <div
                className="govuk-tabs__panel govuk-tabs__panel--hidden"
                id="school-service-products"
              >
                <div>
                  <h2
                    className="govuk-heading-m govuk-!-margin-bottom-6"
                  >
                    Academic term/year products
                  </h2>
                  <p
                    className="govuk-body-m govuk-!-margin-top-5"
                  >
                    <em>
                      You currently have no academic term/year products that can be exported.
                    </em>
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </CsrfForm>
  </BaseLayout>
</Fragment>
`;

exports[`selectExports renders fully when the user has products they can export, but no point to point products 1`] = `
<Fragment>
  <BaseLayout
    description="Export selected products into NeTEx."
    title="Select Exports"
  >
    <BackButton
      href="/products/exports"
    />
    <CsrfForm
      action="/api/selectExports"
      csrfToken=""
      method="post"
    >
      <div
        className="govuk-grid-row"
      >
        <div
          className="govuk-grid-column-full"
        >
          <div
            className="dft-flex dft-flex-justify-space-between"
          >
            <h1
              className="govuk-heading-xl"
            >
              Export your selected products
            </h1>
             
            <div
              className="align-middle"
            >
              <button
                className="govuk-button"
                disabled={false}
                onClick={[Function]}
                type="submit"
              >
                Export selected products
              </button>
            </div>
          </div>
          <div
            className="govuk-grid-row"
          >
            <div
              className="dft-flex dft-flex-justify-space-between"
            >
              <div
                className="govuk-grid-column-two-thirds"
              >
                <p
                  className="govuk-body-m govuk-!-margin-bottom-5"
                >
                  This page will export all of the products you select. Expired products, or products for expired services, will not be included in the list below.
                </p>
              </div>
              <button
                className="govuk-button govuk-button--secondary"
                data-module="govuk-button"
                id="select-all"
                onClick={[Function]}
              >
                Select all
              </button>
            </div>
          </div>
          <div>
            <strong
              className="govuk-tag govuk-tag--blue govuk-!-margin-bottom-4"
              id="products-selected"
            >
              0
               / 
              3
               selected
            </strong>
            <div
              className="govuk-tabs"
              data-module="govuk-tabs"
            >
              <h2
                className="govuk-tabs__title"
              >
                Products
              </h2>
              <ul
                className="govuk-tabs__list"
              >
                <li
                  className="govuk-tabs__list-item govuk-tabs__list-item--selected"
                >
                  <a
                    className="govuk-tabs__tab"
                    href="#services"
                  >
                    Services
                  </a>
                </li>
                <li
                  className="govuk-tabs__list-item"
                >
                  <a
                    className="govuk-tabs__tab"
                    href="#period-products"
                  >
                    Period products
                  </a>
                </li>
                <li
                  className="govuk-tabs__list-item"
                >
                  <a
                    className="govuk-tabs__tab"
                    href="#flat-fare-products"
                  >
                    Flat fare products
                  </a>
                </li>
                <li
                  className="govuk-tabs__list-item"
                >
                  <a
                    className="govuk-tabs__tab"
                    href="#multi-operator-products"
                  >
                    Multi operator products
                  </a>
                </li>
                <li
                  className="govuk-tabs__list-item"
                >
                  <a
                    className="govuk-tabs__tab"
                    href="#school-service-products"
                  >
                    Academic products
                  </a>
                </li>
              </ul>
              <div
                className="govuk-tabs__panel"
                id="services"
              >
                <h2
                  className="govuk-heading-m govuk-!-margin-bottom-6"
                >
                  Services
                </h2>
                <p
                  className="govuk-body-m govuk-!-margin-top-5"
                >
                  <em>
                    You currently have no single or return products that can be exported.
                  </em>
                </p>
              </div>
              <div
                className="govuk-tabs__panel govuk-tabs__panel--hidden"
                id="period-products"
              >
                <div>
                  <h2
                    className="govuk-heading-m govuk-!-margin-bottom-6"
                  >
                    Period products
                  </h2>
                  <div
                    className="govuk-checkboxes__item govuk-checkboxes--small govuk-!-margin-top-2 govuk-!-margin-left-4"
                    key="checkbox-product-1"
                  >
                    <input
                      checked={false}
                      className="govuk-checkboxes__input"
                      id="checkbox-1"
                      name="productsToExport"
                      onChange={[Function]}
                      onClick={[Function]}
                      type="checkbox"
                      value="1"
                    />
                    <label
                      className="govuk-label govuk-checkboxes__label"
                      htmlFor="checkbox-1"
                      id="product-1"
                      role="input"
                    >
                      Best product | 01/02/2022
                    </label>
                  </div>
                </div>
              </div>
              <div
                className="govuk-tabs__panel govuk-tabs__panel--hidden"
                id="flat-fare-products"
              >
                <div>
                  <h2
                    className="govuk-heading-m govuk-!-margin-bottom-6"
                  >
                    Flat fare products
                  </h2>
                  <div
                    className="govuk-checkboxes__item govuk-checkboxes--small govuk-!-margin-top-2 govuk-!-margin-left-4"
                    key="checkbox-product-2"
                  >
                    <input
                      checked={false}
                      className="govuk-checkboxes__input"
                      id="checkbox-2"
                      name="productsToExport"
                      onChange={[Function]}
                      onClick={[Function]}
                      type="checkbox"
                      value="2"
                    />
                    <label
                      className="govuk-label govuk-checkboxes__label"
                      htmlFor="checkbox-2"
                      id="product-2"
                      role="input"
                    >
                      Super product | 02/02/2022
                    </label>
                  </div>
                </div>
              </div>
              <div
                className="govuk-tabs__panel govuk-tabs__panel--hidden"
                id="multi-operator-products"
              >
                <div>
                  <h2
                    className="govuk-heading-m govuk-!-margin-bottom-6"
                  >
                    Multioperator products
                  </h2>
                  <div
                    className="govuk-checkboxes__item govuk-checkboxes--small govuk-!-margin-top-2 govuk-!-margin-left-4"
                    key="checkbox-product-3"
                  >
                    <input
                      checked={false}
                      className="govuk-checkboxes__input"
                      id="checkbox-3"
                      name="productsToExport"
                      onChange={[Function]}
                      onClick={[Function]}
                      type="checkbox"
                      value="3"
                    />
                    <label
                      className="govuk-label govuk-checkboxes__label"
                      htmlFor="checkbox-3"
                      id="product-3"
                      role="input"
                    >
                      Super product | 02/02/2022
                    </label>
                  </div>
                </div>
              </div>
              <div
                className="govuk-tabs__panel govuk-tabs__panel--hidden"
                id="school-service-products"
              >
                <div>
                  <h2
                    className="govuk-heading-m govuk-!-margin-bottom-6"
                  >
                    Academic term/year products
                  </h2>
                  <p
                    className="govuk-body-m govuk-!-margin-top-5"
                  >
                    <em>
                      You currently have no academic term/year products that can be exported.
                    </em>
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </CsrfForm>
  </BaseLayout>
</Fragment>
`;
